# ghidra-sleigh

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  DESIGN.md  README.md  meson.build  meson_options.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: dist_ghidra.py  get_ghidra_info.py  sleigh_compile.py  sync_ghidra.py
src/ghidra_sleigh/: __init__.py  _version.py  _version.py.in  meson.build
tests/: test_get_ghidra_info.py  test_init.py
