option(
  'ghidra_root',
  type: 'string',
  value: 'third_party/ghidra',
  description: 'Path to the Ghidra source tree root (containing Ghidra/Processors and Ghidra/Features).',
)

option(
  'all_processors',
  type: 'boolean',
  value: true,
  description: 'Compile .sla files for all Ghidra processors. Set to false to compile only major ISAs (x86, AARCH64, ARM, RISCV, MIPS).',
)
