[build-system]
requires = ["meson-python>=0.17", "meson>=1.6"]
build-backend = "mesonpy"

[project]
name = "ghidra-sleigh"
dynamic = ["version"]
description = "Pre-compiled Sleigh runtime data from Ghidra, packaged as a Python library."
license = "Apache-2.0"
requires-python = ">=3.13"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
]

[project.urls]
Repository = "https://github.com/patacca/ghidra-sleigh"
Issues = "https://github.com/patacca/ghidra-sleigh/issues"
Changelog = "https://github.com/patacca/ghidra-sleigh/releases"

[project.optional-dependencies]
dev = ["ruff", "pytest", "tox"]

[tool.meson-python]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.tox]
env_list = ["lint", "format", "py"]
no_package = true

[tool.tox.env_run_base]
skip_install = true
deps = ["pytest"]
set_env = { PYTHONPATH = "{tox_root}/src:{tox_root}/scripts" }
commands = [["pytest"]]

[tool.tox.env.lint]
deps = ["ruff"]
commands = [["ruff", "check", "src/", "scripts/", "tests/"]]

[tool.tox.env.format]
deps = ["ruff"]
commands = [["ruff", "format", "--check", "src/", "scripts/", "tests/"]]
